# deputy

./: Cargo.toml  LICENSE  README.md
src/: config.rs  context.rs  error.rs  main.rs  model.rs  spinner.rs
src/adapters/: mod.rs  rig_tool_adapter.rs
src/core/: mod.rs  model.rs  permissions.rs  tool.rs
src/io/: display.rs  input.rs  mod.rs
src/provider/: factory.rs  mod.rs  session_factory.rs
src/provider/anthropic/: anthropic_model.rs  messages.md  mod.rs  session_builder.rs  types.rs
src/provider/openai/: mod.rs  openai_model.rs  session_builder.rs  types.rs
src/session/: mod.rs
src/tool/: exec_command.rs  list_files.rs  mod.rs  read_files.rs  tool.rs  write_file.rs
src/tools/: exec_command.rs  list_files.rs  mod.rs  read_files.rs  registry.rs  tool.rs  write_file.rs
src/ui/: display.rs  input.rs  mod.rs
