[package]
name = "deputy"
version = "0.1.0"
edition = "2024"
description = "Agentic CLI tool"
license = "MIT"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
dirs = "5.0"
ignore = "0.4.22"
indicatif = "0.17.8"
reqwest = { version = "0.12", features = ["json"] }
rustyline = "14.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.0", features = ["full"] }