[package]
name = "deputy"
version = "0.2.9"
edition = "2024"
description = "An experimental terminal-based AI coding assistant that integrates directly with your filesystem and shell. Deputy leverages agentic LLM systems to read code, manipulate files, execute shell commands, and navigate projects. It provides a modular, permissioned workflow for safe, contextual, and automated developer assistance, supporting both OpenAI and Anthropic backends."
license = "MIT"
repository = "https://github.com/hgrsd/deputy"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
ignore = "0.4.22"
reqwest = { version = "0.12", features = ["json"] }
rustyline = "16.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
similar = "2.7.0"
tokio = { version = "1.46.0", features = ["full"] }
